{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 48,
  "lineage": "bee5109d-ea1c-8a9f-2be1-c4f458057d1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005cd0596e9bfd480",
            "association_id": "eipassoc-0c3975ce539b729db",
            "domain": "vpc",
            "id": "eipalloc-005cd0596e9bfd480",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02886e25c0410effb",
            "private_dns": "ip-10-0-1-221.ec2.internal",
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-3-223-174-133.compute-1.amazonaws.com",
            "public_ip": "3.223.174.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MYEIP"
            },
            "tags_all": {
              "Name": "MYEIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:869227219142:instance/i-0a31653a12814bc51",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a31653a12814bc51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-053ebf2c55f7c08f9",
            "private_dns": "ip-10-0-2-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04393fd440484af75",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05158917dd3016461",
            "tags": {
              "Name": "PRAT_Instance"
            },
            "tags_all": {
              "Name": "PRAT_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d51a4ceef2f7ce4"
            ]
          },
          "dependencies": [
            "aws_security_group.PRAT_SG",
            "aws_subnet.PRAT",
            "aws_vpc.MYVPC1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:869227219142:instance/i-00b1d542b72b87ff9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b1d542b72b87ff9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d18f7f5fdfffdf33",
            "private_dns": "ip-10-0-2-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-077dc0e5b859bc358",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05158917dd3016461",
            "tags": {
              "Name": "PRAT_Instance"
            },
            "tags_all": {
              "Name": "PRAT_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d51a4ceef2f7ce4"
            ]
          },
          "dependencies": [
            "aws_security_group.PRAT_SG",
            "aws_subnet.PRAT",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:869227219142:instance/i-0a1965196adfc04e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1965196adfc04e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc8e139e56d5991d",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_ip": "34.232.77.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05bcfedf6f5916d3b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d151df5b80c240b2",
            "tags": {
              "Name": "PUB_Instance"
            },
            "tags_all": {
              "Name": "PUB_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0153b362458300561"
            ]
          },
          "dependencies": [
            "aws_security_group.PUB_SG",
            "aws_subnet.PUB",
            "aws_vpc.MYVPC1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:869227219142:instance/i-01cb46686b9b6d1ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01cb46686b9b6d1ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b517df0c751f72c",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_ip": "54.160.71.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06e4a5dcc4faac8fc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d151df5b80c240b2",
            "tags": {
              "Name": "PUB_Instance"
            },
            "tags_all": {
              "Name": "PUB_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0153b362458300561"
            ]
          },
          "dependencies": [
            "aws_security_group.PUB_SG",
            "aws_subnet.PUB",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:internet-gateway/igw-0c0d5b523cf9c39e0",
            "id": "igw-0c0d5b523cf9c39e0",
            "owner_id": "869227219142",
            "tags": {
              "Name": "IGW1"
            },
            "tags_all": {
              "Name": "IGW1"
            },
            "vpc_id": "vpc-0cfbcd6beba067f88"
          },
          "dependencies": [
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005cd0596e9bfd480",
            "association_id": "eipassoc-0c3975ce539b729db",
            "connectivity_type": "public",
            "id": "nat-04b24e7f35b402104",
            "network_interface_id": "eni-02886e25c0410effb",
            "private_ip": "10.0.1.221",
            "public_ip": "3.223.174.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d151df5b80c240b2",
            "tags": {
              "Name": "NAT_GW"
            },
            "tags_all": {
              "Name": "NAT_GW"
            }
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_subnet.PUB",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:network-acl/acl-0058bfdf2ef02abfc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0058bfdf2ef02abfc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "869227219142",
            "subnet_ids": [
              "subnet-05158917dd3016461",
              "subnet-0d151df5b80c240b2"
            ],
            "tags": {
              "Name": "NACL"
            },
            "tags_all": {
              "Name": "NACL"
            },
            "vpc_id": "vpc-0cfbcd6beba067f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "Nat_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00be1d2741abc41c3",
            "network_acl_id": "acl-0058bfdf2ef02abfc",
            "subnet_id": "subnet-0d151df5b80c240b2"
          },
          "dependencies": [
            "aws_network_acl.NACL",
            "aws_subnet.PUB",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "Nat_ass_prat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-07a85d339712c5002",
            "network_acl_id": "acl-0058bfdf2ef02abfc",
            "subnet_id": "subnet-05158917dd3016461"
          },
          "dependencies": [
            "aws_network_acl.NACL",
            "aws_subnet.PRAT",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4250982680",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0058bfdf2ef02abfc",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.NACL",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-953052297",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0058bfdf2ef02abfc",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.NACL",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ass_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c0d5b523cf9c39e0",
            "id": "r-rtb-013053ec6dbb14b2e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013053ec6dbb14b2e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW1",
            "aws_route_table.PUBRT",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d235ff77ec4e22961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04b24e7f35b402104",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d235ff77ec4e2296",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elasticip",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.PRATRT",
            "aws_subnet.PUB",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRATRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:route-table/rtb-0d235ff77ec4e2296",
            "id": "rtb-0d235ff77ec4e2296",
            "owner_id": "869227219142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b24e7f35b402104",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRATRT"
            },
            "tags_all": {
              "Name": "PRATRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfbcd6beba067f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PUBRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:route-table/rtb-013053ec6dbb14b2e",
            "id": "rtb-013053ec6dbb14b2e",
            "owner_id": "869227219142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0d5b523cf9c39e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PUBRT"
            },
            "tags_all": {
              "Name": "PUBRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfbcd6beba067f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9b97fe47d0b49c",
            "route_table_id": "rtb-013053ec6dbb14b2e",
            "subnet_id": "subnet-0d151df5b80c240b2"
          },
          "dependencies": [
            "aws_route_table.PUBRT",
            "aws_subnet.PUB",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bbc35008008a4a5",
            "route_table_id": "rtb-0d235ff77ec4e2296",
            "subnet_id": "subnet-05158917dd3016461"
          },
          "dependencies": [
            "aws_route_table.PRATRT",
            "aws_subnet.PRAT",
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRAT_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:security-group/sg-09d51a4ceef2f7ce4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d51a4ceef2f7ce4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-20230904164856381100000001",
            "name_prefix": "private-",
            "owner_id": "869227219142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PRAT_SG"
            },
            "tags_all": {
              "Name": "PRAT_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfbcd6beba067f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PUB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:security-group/sg-0153b362458300561",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0153b362458300561",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-20230904164856391400000002",
            "name_prefix": "public-",
            "owner_id": "869227219142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PUB_SG"
            },
            "tags_all": {
              "Name": "PUB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfbcd6beba067f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:subnet/subnet-05158917dd3016461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05158917dd3016461",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869227219142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRAT"
            },
            "tags_all": {
              "Name": "PRAT"
            },
            "vpc_id": "vpc-0cfbcd6beba067f88"
          },
          "dependencies": [
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:subnet/subnet-0d151df5b80c240b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d151df5b80c240b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869227219142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUB"
            },
            "tags_all": {
              "Name": "PUB"
            },
            "vpc_id": "vpc-0cfbcd6beba067f88"
          },
          "dependencies": [
            "aws_vpc.MYVPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MYVPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869227219142:vpc/vpc-0cfbcd6beba067f88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0346e7837872137a9",
            "default_route_table_id": "rtb-0b8fe4fff681952ec",
            "default_security_group_id": "sg-02d6cc416825d4ef9",
            "dhcp_options_id": "dopt-00513bd6697d7d21e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cfbcd6beba067f88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8fe4fff681952ec",
            "owner_id": "869227219142",
            "tags": {
              "Name": "MYVPC1"
            },
            "tags_all": {
              "Name": "MYVPC1"
            }
          }
        }
      ]
    }
  ]
}